# rdf-network-viz

./: .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
notebooks/: test_holoviews.ipynb
src/: config.py  extract.py  main.py  process.py  run_notebook.py  viz.py
tests/: test_process.py
