[tool.poetry]
name = "rdf-network-viz"
version = "0.1.0"
description = ""
authors = ["cmdoret"]

[tool.poetry.dependencies]
python = "^3.8, <3.11"
pdoc3 = "^0.10.0"
notebook = "^6.4.10"
prefect = "^2.7.6"
scikit-learn = "^1.2.0"
pandas = "^1.5.2"
prefect-jupyter = "^0.2.0"
interrogate = "^1.5.0"
joblib = "^1.2.0"
holoviews = {extras = ["recommended"], version = "^1.15.4"}
black = "^22.12.0"
gimie = "^0.2.0"
prefect-dask = "^0.2.2"
networkx = "^3.0"
scikit-image = "^0.19.3"
xarray = "^2023.1.0"
setuptools = "^66.1.1"
wheel = "^0.38.4"
llvmlite = "0.39.1"
datashader = "^0.14.3"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''

[tool.pyright]
reportMissingTypeStubs = false
reportUnknownVariableType = "none"
reportGeneralTypeIssues = "none"